# MP13-Bookstore

./: .dockerignore  Makefile  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
MP13Bookstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
order/: factories.py
order/factories/: order_factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_serializer.py
order/tests/test_serializer/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py  urls.py
product/factories/: product_factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_serializer/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py  text_category.viewset.py
